--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -244,6 +244,13 @@
   "Sustainability":{
     "sustainability-page-title": "Sustainability",
 
+    "sustainability-into-left-header":"We are a part of the energy revolution",
+    "sustainability-into-left-header-desc": "We take our values seriously and hold ourselves accountable to the communities where we operate and the greater good of the planet. We support the UN’s mission to ensure that by 2030 all people enjoy peace and prosperity and do our part to contribute to the Global Sustainability Development Goals.",
+
+    "sustainability-into-right-header": "Our Approach",
+    "sustainability-into-right-header-desc":"We take the lead in responsible mining while delivering lasting value to communities, protecting the environment, and meeting the expectations of our stakeholders. Throughout the project lifecycle, we work in close partnership with stakeholders to ensure our activities contribute meaningfully to social progress, economic empowerment, and ecological integrity.",
+    
+
      "water-management-title": "Our approach to Water management",
      "water-management-desc": "We recognize our responsibility to manage water with care, efficiency and transparency. Our goal is to operate within local water limits while contributing to watershed health and long-term community resilience, focusing on minimizing freshwater withdrawal, improving water recycling and reuse, and preventing contamination of surface and groundwater sources.",
      
