--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -250,7 +250,7 @@
     "sustainability-into-right-header-desc":"Dufata iya mbere mu gukora ubucukuzi bwuzuza inshingano binyuze mu bikorwa bizana inyungu zirambye ku muryango mugari, tubungabunga ibidukikije, kandi buri wese mu bo dukorana akabasha kubona ibyo akeneye. Kuva dutangiye kugeza ku musozo, dukorana bya hafi n’abafatanyabikorwa bacu kugira ngo tumenye neza ko ibikorwa byacu bitanga umusanzu mu iterambere ry’imibereho myiza, ubukungu no kwita ku bidukikije.",
 
      
-     "water-management-title": " Igenamikorere ryacu mu micungire y'Amazi",
+     "water-management-title": " Imicungire y'Amazi",
      "water-management-desc": "Tuzirikana inshingano zacu mu micungire y'amazi, mu buryo bwitondewe, buboneye kandi buciye mu mucyo. Intego yacu ni ugukoresha ibipimo byagenwe by'amazi tudasize inyuma urusobe rw'ibinyabuzima by'aho amazi ahurira hamwe no kwita ku ngamba zirambye zifasha umuryango mugari. Twibanda cyane ku kugabanya ikoreshwa ry'amazi asukuye, tugateza imbere uburyo hongera gukoreshwa amazi yari yakoreshejwe, ari na ko twirinda kwanduza amasoko y'amazi munsi y'ubutaka.",
      
      "approach-to-Tailings-title": "Our approach to Tailings and waste storage",
