--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -161,6 +161,7 @@
   "our-project-page": {
 
         "projects-title": "Imishinga yacu",
+        "projects-sub-title": "Imishinga yacu",
         "project-description-1": "Trinity Metals Mines ifite imishinga itatu ikorera mu Rwanda – Rutongo Mines, Nyakabingo Mine, na Musha Mines. Zirimo ibirombe bitatu by’ibanze n’ibindi birombe bito byegereye ibyo birombe bitatu. ",
         "project-description-2": "Ibirombe byacu bikorerwa ku mabwiriza mpuzamahanga agenga gucukura ibirombe ndetse tukita ku mahame yo kubungabunga ibidukikije. Mu birombe byacu  ntabwo dukoresha ibikoresho byangiza ibidukikije cyangwa dukore ibyo bikoresho. ",
         "project-description-3": "Umusaruro wacu wose wahawe icyemezo cyo gukorera mu mutekano. Ibirombe byacu bikora mu buryo bwubahiriza amabwiriza ya OECD. ",
