changes on report and policy documents

--- a/public/locales/kiny/translation.json
+++ b/public/locales/kiny/translation.json
@@ -161,6 +161,7 @@
   "our-project-page": {
 
         "projects-title": "Imishinga yacu",
+        "projects-sub-title": "Imishinga yacu",
         "project-description-1": "Trinity Metals Mines ifite imishinga itatu ikorera mu Rwanda – Rutongo Mines, Nyakabingo Mine, na Musha Mines. Zirimo ibirombe bitatu by’ibanze n’ibindi birombe bito byegereye ibyo birombe bitatu. ",
         "project-description-2": "Ibirombe byacu bikorerwa ku mabwiriza mpuzamahanga agenga gucukura ibirombe ndetse tukita ku mahame yo kubungabunga ibidukikije. Mu birombe byacu  ntabwo dukoresha ibikoresho byangiza ibidukikije cyangwa dukore ibyo bikoresho. ",
         "project-description-3": "Umusaruro wacu wose wahawe icyemezo cyo gukorera mu mutekano. Ibirombe byacu bikora mu buryo bwubahiriza amabwiriza ya OECD. ",
@@ -253,10 +254,10 @@
      "water-management-title": " Imicungire y'Amazi",
      "water-management-desc": "Tuzirikana inshingano zacu mu micungire y'amazi, mu buryo bwitondewe, buboneye kandi buciye mu mucyo. Intego yacu ni ugukoresha ibipimo byagenwe by'amazi tudasize inyuma urusobe rw'ibinyabuzima by'aho amazi ahurira hamwe no kwita ku ngamba zirambye zifasha umuryango mugari. Twibanda cyane ku kugabanya ikoreshwa ry'amazi asukuye, tugateza imbere uburyo hongera gukoreshwa amazi yari yakoreshejwe, ari na ko twirinda kwanduza amasoko y'amazi munsi y'ubutaka.",
      
-     "approach-to-Tailings-title": "Our approach to Tailings and waste storage",
+     "approach-to-Tailings-title": "Tailings and waste storage",
       "approach-to-Tailings-desc": "Responsible tailings management is a core part of our environmental stewardship. Tailings—the residues left after mineral extraction—can pose significant risks if not properly handled. That’s why we adhere to globally recognized best practices, invest in risk mitigation technologies, and maintain open dialogue with surrounding communities. Our approach goes beyond compliance; it reflects our deep commitment to safety, sustainability, and building trust at every stage of our operations.",
 
-      "approach-to-closure-management-title": "Our approach to closure management",
+      "approach-to-closure-management-title": "Closure management",
       "approach-to-closure-management-desc1": "We plan for closure with a focus on long-term environmental stability, community resilience and sustainable land use.",
       "approach-to-closure-management-desc2": "Our approach is built on early engagement, progressive rehabilitation and collaboration with host communities to ensure that post-mining landscapes are safe, productive, and beneficial. We integrate closure planning into every phase of the mine life cycle, aligning with international best practices and local expectations.",
 
