--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -18,7 +18,7 @@
         "rutongo": "Rutongo",
         "nyakabingo": "Nyakabingo",
         "musha":"Musha",
-        "lithium-exploration":"Ubushakashatsi kuri Lithium"
+        "lithium-exploration":"Umushinga wa Ntunga"
         
       },
       "sustainability": "Iterambere Rirambye",
@@ -229,12 +229,20 @@
         },
 
         "LITHIUM-EXPLORATION": {
-          "LITHIUM-EXPLORATION-title": "LITHIUM-EXPLORATION",
+          "LITHIUM-EXPLORATION-title": "Ntunga Lithium Project",
           "LITHIUM-EXPLORATION-subtitle": "The Ntunga pegmatite offers robust development opportunities for Trinity Metals. ",
-          "description1": "In 2018, exploration efforts within the Trinity Ntunga licence successfully defined an initial 9Mt Sn-Ta (Tin-Tantalum) resource hosted in a large LCT pegmatite system. In addition, the team discovered consistent high grades of 1.5% Li₂O (Lithium Oxide) dominantly within spodumene mineralisation in several holes with intersections over 80m true width and open to depth. ",
-          "description2": "The team’s further analysis of drill core has revealed a second potential host of significant volumes of lithium mineralisation of up to 1% Li₂O. ",
-          "description3": "As a result of this exciting discovery, the group performed an additional study and test work, which prompted the next phase of modeling and metallurgical testing. ",
-          "description4": "The potential exists to define a globally significant Li-Sn-Ta resource in a secure and rapidly developing country. Trinity is focused on advancing this deposit and anticipates an updated resource statement in the near term. We are confident that we will soon move into a full feasibility phase."
+          "description1": "In 2018, Trinity Metals (PIRAN Rwanda Ltd) began a bold exploration campaign at its Ntunga property—and the results were promising. Initial shallow drilling (up to 250 meters) revealed encouraging grades of 0.02% Ta₂O₅ and 0.12% Sn in weathered pegmatites, along with lithium mineralization—primarily spodumene—appearing in fresh pegmatites from depths of 80 meters and beyond.",
+          "description2": "Fast forward to 2023, with the global surge in lithium demand, we took our exploration to the next level. A new phase of deeper drilling (300–780 meters) was launched to test theorebody’s depth potential—and it delivered. Over 39 drill holes, we encountered grades reaching up to 4% Li₂O, with standout intercepts including:",
+          "description2-1": "DD_055:",
+            "description2-1-0": "195m @ 1.4% Li₂O",
+          "description2-2": "DD_062:",
+            "description2-2-0": "148m @ 1.46% Li₂O",
+          "description2-3": "DD_064:",
+            "description2-3-0": "16m @ 2.1% Li₂O and 30m @ 1.4% Li₂O",
+          "description2-4": "DD_056:",
+            "description2-4-0": "8m @ 2.1% Li₂O",
+          "description3": "In total, we drilled nearly 12,000 metres across 39 diamond holes, with over 2,700 samples assayed. Notably, high-grade tin and tantalum intercepts remain consistent with the 2018 results, with improved grades trending eastward across the orebody.",
+          "description4": "Based on this limited but highly encouraging drilling, the lithium potential at Ntunga is currently estimated between 35 to 70 million tonnes at >1% Li₂O. Up next: geological structural studies, metallurgical testing, resource estimation, and expanded drilling. This is just the beginning of unlocking Ntunga’s full critical minerals potential."
 
         }
 
@@ -310,7 +318,9 @@
     "governance-list3-2": "We consult with local communities and contribute to their social, economic and institutional development, taking into account gender-sensitive aspects.",
     "governance-list4": "Environment: ",
     "governance-list4-2": "We seek continual improvement of our environmental performance.",
-    
+    "governance-list5": "Trinity Nyakabingo Mine 2022 Annual Due Diligence Report",
+    "governance-list6": "Rutongo Mines 2022 Annual Due Diligence Report",
+    "governance-list7": "Due Diligence Report_Piran Rwanda Ltd",
 
     "policies-standards": "Politiki n’Amahame"
      
