--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -6,11 +6,11 @@
       "about-us": "Abo Turi Bo",
       "about": {
           
-          "our-history": "Amateka Yacu ",
-          "our-values":"Indangagaciro Zacu",
-          "our-strategies":"Ingamba Zacu",
-          "our-products": "Ibikorwa Byacu",
-          "our-leadership":"Ubuyobozi Bwacu"
+          "our-history": "Amateka",
+          "our-values":"Indangagaciro",
+          "our-strategies":"Ingamba",
+          "our-products": "Ibikorwa",
+          "our-leadership":"Ubuyobozi"
       },
 
       "OurProjects": "Imishinga Dufite",
